[tool.poetry]
name = "vllm-reka"
version = "0.1.0"
description = "vLLM plugin for Reka models"
packages = [{include = "vllm_reka"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
vllm = ">=0.15.0,<0.16.0"
tiktoken = "*"
regex = "*"
opencv-python = "*"
numpy = "*"
Pillow = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"

[tool.poetry.plugins."vllm.general_plugins"]
register_reka = "vllm_reka:register"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
