[project]
name = "vllm-reka"
version = "0.1.0"
description = "vLLM plugin for Reka models"
requires-python = ">=3.10,<3.14"
dependencies = [
    "vllm>=0.15.0,<0.16.0",
    "tiktoken",
    "regex",
    "opencv-python",
    "numpy",
    "Pillow",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.entry-points."vllm.general_plugins"]
register_reka = "vllm_reka:register"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vllm_reka"]
